--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.4",
     "bcryptjs": "^2.4.3",
+    "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.1.2",
+    "mongoose": "^6.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-redux": "^7.2.5",
+    "react-scripts": "^4.0.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -39,11 +41,7 @@
   },
   "devDependencies": {
     "concurrently": "^6.2.1",
-    "config": "^3.3.6",
-    "express": "^4.17.1",
-    "express-validator": "^6.12.1",
-    "mongoose": "^6.0.7",
     "nodemon": "^2.0.12",
-    "request": "^2.88.2"
+    "react-router-dom": "^5.3.0"
   }
 }
